# qtFinal

./: CMakeLists.txt  main.cpp
class/: Bd2no.cpp  Bd2no.h  Component.cpp  Component.h  El2no.cpp  El2no.h  Mesh.cpp  Mesh.h  No2xy.cpp  No2xy.h
lib/include/: TCPListener.cpp  TCPListener.h  example_DGESV_colmajor.cpp  lapacke.h  lapacke_example_aux.cpp  lapacke_example_aux.h
ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
ui/resource/: background.qrc
